fix: ajust vertical align and width

--- a/products/products.css
+++ b/products/products.css
@@ -5,4 +5,7 @@
 
 .products li{
     display: inline-block;
+    text-align: center;
+    width:30%
+    vertical-align: top;
 }
